# telegram-faucet

./: Cargo.toml  README.md  bot.toml
.github/workflows/: build.yml
src/: commands.rs  db.rs  errors.rs  main.rs  types.rs  utils.rs
src/extrinsics/: balances.rs  mod.rs  utility.rs
