[package]
name = "telegram-token-faucet"
version = "0.1.0"
authors = ["Jamie Deng <djptux@gmail.com>"]
edition = "2018"

[dependencies]
bincode = "1.3.3"
chrono = { version = "0.4", features = ["serde"] }
codec = { package = "parity-scale-codec", version = "2.1.1", default-features = false, features = ["derive"] }
log = "0.4.14"
pretty_env_logger = "0.4.0"
once_cell = "1.7"
serde = { version = "1.0", features = ["derive"] }
sled = "0.34"
sp-core = "3.0.0"
sp-runtime = "3.0.0"
subxt = { version = "0.15", package = "substrate-subxt" }
toml = "0.5"
teloxide = { version = "0.4", features = ["auto-send", "macros"] }
thiserror = "1.0"
tokio = { version =  "1.5", features = ["rt-multi-thread", "macros"] }
